[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/options.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/app_interface.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/UIBGblur.png" type="Texture" id=3]
[ext_resource path="res://objects/blurshader.tres" type="Material" id=4]

[node name="options" type="Control"]
pause_mode = 2
anchor_right = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
material = ExtResource( 4 )
anchor_right = 1.0
margin_bottom = 742.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="."]
self_modulate = Color( 0.0235294, 0.0392157, 0.180392, 0.568627 )
anchor_right = 1.0
margin_left = -603.0
margin_top = -168.0
margin_right = 558.0
margin_bottom = 890.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 270.0
margin_right = -192.0
margin_bottom = 401.0
custom_constants/separation = 15

[node name="baudrate" type="OptionButton" parent="VBoxContainer"]
margin_right = 83.0
margin_bottom = 51.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "300"
align = 1
icon_align = 1
items = [ "300", null, false, 0, null ]
selected = 0

[node name="port" type="OptionButton" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 121.0
margin_bottom = 124.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "COM1"
align = 1
icon_align = 1
items = [ "COM1", null, false, 0, null ]
selected = 0

[connection signal="item_selected" from="VBoxContainer/baudrate" to="." method="_on_baudrate_item_selected"]
[connection signal="pressed" from="VBoxContainer/baudrate" to="." method="_on_baudrate_pressed"]
[connection signal="item_selected" from="VBoxContainer/port" to="." method="_on_port_item_selected"]
[connection signal="pressed" from="VBoxContainer/port" to="." method="_on_port_pressed"]
